workspace_check_4.log
warning: struct `McpProtocol` is never constructed
  --> meerkat-mcp-client/src/protocol.rs:16:12
   |
16 | pub struct McpProtocol {
   |            ^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: associated items `new`, `server_info`, `list_tools`, `call_tool_text`, and `close` are never used
  --> meerkat-mcp-client/src/protocol.rs:21:12
   |
20 | impl McpProtocol {
   | ---------------- associated items in this implementation
21 |     pub fn new(service: RunningService<RoleClient, ()>) -> Self {
   |            ^^^
...
25 |     pub fn server_info(&self) -> Option<&rmcp::model::ServerInfo> {
   |            ^^^^^^^^^^^
...
29 |     pub async fn list_tools(&self) -> Result<Vec<ToolDef>, McpError> {
   |                  ^^^^^^^^^^
...
57 |     pub async fn call_tool_text(&self, name: &str, args: &Value) -> Resul...
   |                  ^^^^^^^^^^^^^^
...
86 |     pub async fn close(self) -> Result<(), McpError> {
   |                  ^^^^^

warning: function `extract_text_content_strict` is never used
  --> meerkat-mcp-client/src/protocol.rs:97:4
   |
97 | fn extract_text_content_strict(contents: Vec<Content>) -> Result<String, ...
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `meerkat-mcp-client` (lib) generated 3 warnings
warning: `meerkat-mcp-client` (lib test) generated 2 warnings (2 duplicates)
warning: function `description` is never used
  --> meerkat-tools/src/builtin/sub_agent/spawn.rs:37:12
   |
37 |     pub fn description() -> String {
   |            ^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: `meerkat-tools` (lib) generated 1 warning
warning: `meerkat-tools` (lib test) generated 1 warning (1 duplicate)
    Checking meerkat v0.1.0 (/Users/luka/src/raik/meerkat)
error[E0308]: mismatched types
   --> meerkat/examples/comms_verbose.rs:139:56
    |
139 |                     return Err(AgentError::llm("test", LlmFailureReason::ProviderError, e.to_string()));
    |                                ---------------         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `LlmFailureReason`, found enum constructor
    |                                |
    |                                arguments to this function are incorrect
    |
    = note:          expected enum `LlmFailureReason`
            found enum constructor `fn(Value) -> LlmFailureReason {ProviderError}`
note: associated function defined here
   --> /Users/luka/src/raik/meerkat-core/src/error.rs:216:12
    |
216 |     pub fn llm(
    |            ^^^
help: use parentheses to construct this tuple variant
    |
139 |                     return Err(AgentError::llm("test", LlmFailureReason::ProviderError(/* Value */), e.to_string()));
    |                                                                                       +++++++++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `meerkat` (example "comms_verbose") due to 1 previous error
